commit translated contents

--- a/mixed-reality-docs/index.yml
+++ b/mixed-reality-docs/index.yml
@@ -1,99 +1,219 @@
-### YamlMime:Landing
-title: 혼합 현실 시작
-summary: Windows Mixed Reality를 사용하는 혼합 현실 애플리케이션의 확장, MRTK(Mixed Reality Toolkit), Unity, Unreal, HoloLens 및 Windows 몰입형 헤드셋에 대해 알아봅니다.
+### YamlMime:Hub
+title: Mixed Reality 설명서
+summary: HoloLens 및 Windows 몰입형 헤드셋에서 Windows Mixed Reality, MRTK(Mixed Reality Toolkit), Unity, Unreal 등을 사용하는 Mixed Reality 애플리케이션의 확장된 환경을 살펴봅니다.
+brand: windows
 metadata:
-  title: 혼합 현실 시작
-  description: HoloLens 2와 같은 디바이스에서 혼합 현실 도구 및 기능을 사용하는 방법에 대해 알아봅니다.
-  ms.topic: landing-page
+  title: Mixed Reality 설명서
+  description: Windows Mixed Reality를 사용하는 혼합 현실 애플리케이션의 확장, MRTK(Mixed Reality Toolkit), Unity, Unreal, HoloLens 및 Windows 몰입형 헤드셋에 대해 알아봅니다.
+  services: service
+  ms.service: service
+  ms.subservice: subservice
+  ms.topic: hub-page
+  ms.collection: collection
   author: hferrone
   ms.author: v-haferr
-  ms.date: 07/03/2020
-  ms.openlocfilehash: 4e4d070b04c722c66c04bb28c5880dc64f46b15b
-  ms.sourcegitcommit: 161f3c5a80f6988a9c4af26e29481fee06840e0f
+  ms.date: 07/23/2020
+  ms.openlocfilehash: def9c41323029265a3f7d1c89b811eda94d88cbf
+  ms.sourcegitcommit: 36316e2658d3dfa804d798b9f4fb2f9186052144
   ms.translationtype: HT
   ms.contentlocale: ko-KR
-  ms.lasthandoff: 07/29/2020
-  ms.locfileid: "87390200"
-landingContent:
-- title: 새로운 몰입형 세계의 발견
-  linkLists:
-  - linkListType: overview
+  ms.lasthandoff: 08/01/2020
+  ms.locfileid: "87507707"
+highlightedContent:
+  items:
+  - title: 혼합 현실이란?
+    itemType: overview
+    url: mixed-reality.md
+  - title: HoloLens 2 소개
+    itemType: overview
+    url: https://docs.microsoft.com/hololens/hololens2-hardware
+  - title: 샘플 앱 사용해 보기
+    itemType: sample
+    url: samples.md
+  - title: 개발자
+    itemType: overview
+    url: development.md
+  - title: IT 관리자
+    itemType: concept
+    url: https://docs.microsoft.com/hololens/hololens-requirements
+  - title: VR 마니아
+    itemType: overview
+    url: https://docs.microsoft.com/windows/mixed-reality/enthusiast-guide/
+productDirectory:
+  title: Mixed Reality 살펴보기
+  summary: 디자이너, 개발자, IT 전문가인지 여부에 관계없이 실행하기 전에 안내받을 수 있는 적절하게 준비된 경로를 제공합니다.
+  items:
+  - title: 디자인
+    imageSrc: images/icon-design.jpg
     links:
-    - text: 혼합 현실이란?
-      url: get-started-with-mr.md
-    - text: 혼합 현실 범위의 이해
-      url: case-study-expanding-the-design-process-for-mixed-reality.md
-    - text: 커뮤니티에 참여하기
-      url: community.md
-- title: 혼합 현실 디자인
-  linkLists:
-  - linkListType: concept
+    - url: design.md
+      text: 디자인 및 프로토타입
+    - url: types-of-mixed-reality-apps.md
+      text: Mixed Reality 앱 유형 선택
+    - url: case-study-expanding-the-design-process-for-mixed-reality.md
+      text: 디자인 프로세스 확장
+    - url: app-patterns-landingpage.md
+      text: UX 요소에 대해 알아보기
+    - url: comfort.md
+      text: 사용자 편의성에 대해 알아보기
+    - url: interaction-fundamentals.md
+      text: 상호 작용 기본 사항 이해
+  - title: 개발
+    imageSrc: images/icon-developer.jpg
     links:
-    - text: 디자인 및 프로토타입 생성 시작
-      url: design.md
-    - text: 핵심 디자인 개념 살펴보기
-      url: core-concepts-landingpage.md
-    - text: 상호 작용 기본 사항에 대해 알아보기
-      url: interaction-fundamentals.md
-    - text: UX 요소 통합
-      url: app-patterns-landingpage.md
-- title: 혼합 현실 개발
-  linkLists:
-  - linkListType: get-started
+    - url: development.md
+      text: 기술 경로 선택
+    - url: install-the-tools.md
+      text: 도구 설치
+    - url: unity-development-overview.md
+      text: Unity 시작
+    - url: unreal-development-overview.md
+      text: Unreal 시작
+    - url: directx-development-overview.md
+      text: 네이티브 개발 시작
+    - url: mrtk-porting-guide.md
+      text: HoloLens 2용 앱 준비
+  - title: HoloLens 2 배포
+    imageSrc: images/icon-distribution.png
     links:
-    - text: 혼합 현실 개발 경험 선택
-      url: development.md
-    - text: 도구 설치
-      url: install-the-tools.md
-    - text: 안내 따르기
-      url: tutorials.md
-    - text: Unity 경험 시작
+    - url: https://docs.microsoft.com/hololens/hololens-requirements
+      text: 상업용 배포 준비
+    - url: https://docs.microsoft.com/hololens/hololens-identity
+      text: 사용자 ID 및 로그인 관리
+    - url: https://docs.microsoft.com/hololens/hololens-enroll-mdm
+      text: 디바이스 등록
+    - url: https://docs.microsoft.com/hololens/hololens-updates
+      text: HoloLens 업데이트 관리
+    - url: https://docs.microsoft.com/hololens/hololens-release-notes
+      text: 릴리스 정보
+    - url: https://docs.microsoft.com/hololens/hololens-feedback
+      text: 문제 해결 및 지원
+conceptualContent:
+  title: 프레임워크
+  summary: 개발 프로세스에서 선호하는 엔진이나 언어 또는 준비된 하드웨어를 사용하는지 여부에 관계없이 모든 프레임워크를 지원합니다.
+  items:
+  - title: Unity
+    summary: Mixed Reality Toolkit SDK를 사용하여 Unity에서 애플리케이션을 만들고, 구성하고, 배포합니다.
+    links:
+    - url: unity-development-overview.md
+      itemType: overview
+      text: Unity 개발 개요
+    - url: mrtk-getting-started.md
+      itemType: overview
+      text: MRTK란?
+    - url: mr-learning-base-01.md
+      itemType: tutorial
+      text: HoloLens 2 자습서 시리즈
+    - url: mrtk-101.md
+      itemType: concept
+      text: 핵심 구성 요소
+    - url: shared-experiences-in-unity.md
+      itemType: concept
+      text: 플랫폼 기능 및 API
+    - url: exporting-and-building-a-unity-visual-studio-solution.md
+      itemType: deploy
+      text: 디바이스 또는 에뮬레이터에 배포
+    footerLink:
       url: unity-development-overview.md
-    - text: Unreal 경험 시작
+      text: 자세한 내용
+  - title: Unreal
+    summary: Mixed Reality Toolkit SDK를 사용하여 Unreal에서 애플리케이션을 빌드하고, 사용자 지정하고, 배포합니다.
+    links:
+    - url: unreal-development-overview.md
+      itemType: overview
+      text: Unreal 개발 개요
+    - url: unreal-uxt-ch1.md
+      itemType: tutorial
+      text: 체스 앱 자습서 시리즈 빌드
+    - url: unreal-gaze-input.md
+      itemType: concept
+      text: 핵심 구성 요소
+    - url: unreal-hololens-camera.md
+      itemType: concept
+      text: 플랫폼 기능 및 API
+    - url: performance-recommendations-for-unreal.md
+      itemType: concept
+      text: 성능 추천 사항
+    - url: unreal-deploying.md
+      itemType: deploy
+      text: 디바이스 또는 에뮬레이터에 배포
+    footerLink:
       url: unreal-development-overview.md
-    - text: JavaScript 경험 시작
-      url: javascript-development-overview.md
-    - text: 네이티브(OpenXR/WinRT) 경험 시작
+      text: 자세한 내용
+  - title: 기본
+    summary: OpenXR, WinRT, DirectX를 사용하여 네이티브 홀로그램 환경을 생성합니다.
+    links:
+    - url: directx-development-overview.md
+      itemType: overview
+      text: 네이티브 개발 개요
+    - url: openxr.md
+      itemType: overview
+      text: OpenXR이란?
+    - url: openxr-getting-started.md
+      itemType: get-started
+      text: OpenXR 시작
+    - url: openxr-best-practices.md
+      itemType: concept
+      text: OpenXR 모범 사례
+    - url: openxr-troubleshooting.md
+      itemType: reference
+      text: OpenXR 문제 해결
+    footerLink:
       url: directx-development-overview.md
-- title: 앱 배포
-  linkLists:
-  - linkListType: deploy
-    links:
-    - text: 3D 앱 시작 관리자 디자인 지침
-      url: 3d-app-launcher-design-guidance.md
-    - text: 앱 내 purchaches 통합
-      url: in-app-purchases.md
-    - text: Microsoft Store에 업로드
-      url: submitting-an-app-to-the-microsoft-store.md
-- title: HoloLens 살펴보기
-  linkLists:
-  - linkListType: reference
-    links:
-    - text: HoloLens란?
-      url: https://docs.microsoft.com/hololens/
-    - text: HoloLens 2 하드웨어
-      url: https://docs.microsoft.com/hololens/hololens2-hardware
-    - text: HoloLens 2 둘러보기
-      url: https://docs.microsoft.com/hololens/hololens2-basic-usage
-    - text: 상업적 환경에서 HoloLens 배포
-      url: https://docs.microsoft.com/hololens/hololens-requirements
-- title: Azure 개발자 서비스
-  linkLists:
-  - linkListType: concept
-    links:
-    - text: 클라우드 서비스 개요
-      url: mixed-reality-cloud-services.md
-    - text: Azure Spatial Anchors로 이동
-      url: https://docs.microsoft.com/azure/spatial-anchors/
-    - text: Azure Remote Rendering을 사용하여 개발
-      url: https://docs.microsoft.com/azure/remote-rendering/
-- title: 새로운 기능을 확인하세요!
-  linkLists:
-  - linkListType: whats-new
-    links:
-    - text: Azure 서비스 알아보기
-      url: azure-services.md
-    - text: 새로운 Microsoft Edge
-      url: new-microsoft-edge.md
-    - text: 혼합 현실 커뮤니티 참여
-      url: community.md
+      text: 자세한 내용
+tools:
+  title: SDK 및 API
+  summary: 즐겨찾는 게임 엔진에서 Mixed Reality Toolkit SDK를 시작합니다.
+  items:
+  - title: Unity용 MRTK
+    imageSrc: images/Final_mrtk-small_logo.png
+    url: https://github.com/microsoft/MixedRealityToolkit-Unity
+  - title: Unreal용 MRTK
+    imageSrc: images/Final_mrtk-small_logo.png
+    url: https://github.com/microsoft/MixedRealityToolkit-Unreal
+  - title: Unity용 Windows XR 플러그 인
+    imageSrc: images/Final_unity_logo.png
+    url: https://docs.unity3d.com/Manual/com.unity.xr.windowsmr.html
+  - title: OpenXR 사양
+    imageSrc: images/Final_mrdl_logo.png
+    url: https://www.khronos.org/registry/OpenXR/specs/1.0/html/xrspec.html
+  - title: OpenXR API
+    imageSrc: images/Final_mrdl_logo.png
+    url: https://www.khronos.org/registry/OpenXR/specs/1.0/man/html/openxr.html
+additionalContent:
+  sections:
+  - title: 추가 리소스
+    summary: 상업용으로 배포할 수 있도록 애플리케이션을 준비하거나, Azure Cloud Services를 통합하거나, 샘플 애플리케이션을 테스트합니다.
+    items:
+    - title: 배포
+      links:
+      - text: 3D 앱 시작 관리자 디자인
+        url: 3d-app-launcher-design-guidance.md
+      - text: Mixed Reality 홈용 3D 모델 만들기
+        url: creating-3d-models-for-use-in-the-windows-mixed-reality-home.md
+      - text: UWP 앱에서 3D 앱 시작 관리자 구현
+        url: implementing-3d-app-launchers.md
+      - text: 앱 내 구매 추가
+        url: in-app-purchases.md
+      - text: Microsoft Store에 제출
+        url: submitting-an-app-to-the-microsoft-store.md
+    - title: Azure Cloud Services
+      links:
+      - text: Cloud Services 개요
+        url: mixed-reality-cloud-services.md
+      - text: Azure Spatial Anchors로 이동
+        url: https://docs.microsoft.com/azure/spatial-anchors/
+      - text: Azure Spatial Anchors 자습서
+        url: mr-learning-asa-01.md
+      - text: Azure Remote Rendering을 사용하여 개발
+        url: https://docs.microsoft.com/azure/remote-rendering/
+      - text: Azure Remote Rendering 자습서
+        url: https://docs.microsoft.com/en-us/azure/remote-rendering/tutorials/unity/tutorial-landing
+    - title: HoloLens 2 샘플 앱
+      links:
+      - text: Surfaces
+        url: sampleapp-surfaces.md
+      - text: Periodic Table of Elements 2.0
+        url: https://medium.com/@dongyoonpark/bringing-the-periodic-table-of-the-elements-app-to-hololens-2-with-mrtk-v2-a6e3d8362158
+      - text: Galaxy Explorer 2.0
+        url: galaxy-explorer-update.md
